Login formulier + registratie

--- a/css/iconcepts.css
+++ b/css/iconcepts.css
@@ -152,5 +152,19 @@ nav form button{
 .biedingenSection ul li{
 font-size:0.9rem;
     margin-top:5px;
-    
+}
+
+.loginRegistreerSection{
+    padding:5%;
+    border-radius:20px;
+    height:100%;
+    margin-top: 20%;
+    background-color:white;
+}
+
+.loginRegistreerSection button{
+    margin-top:1rem;
+}
+.onderkantLoginRegistreer{
+    margin-top:1rem;
 }
