CSS Herindeling en veranderen  in engels + kebab-case

--- a/css/iconcepts.css
+++ b/css/iconcepts.css
@@ -9,8 +9,13 @@ body{
 h1,h2,h3,h4,h5,h6{
     font-family: 'Roboto Condensed', sans-serif;
 }
-/*top navigatie*/
 
+
+/* ======================================================================================
+////////////////////////////////////////////\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
+|||||||||||||||||||||||||||||||||||||||Menu & submenu||||||||||||||||||||||||||||||||||||
+\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\/////////////////////////////////////////////
+ =======================================================================================*/
 nav div ul{
     width: 100% ;
 }
@@ -52,6 +57,22 @@ nav form button{
     color:black;
 }
 
+
+.submenu{
+    width:100%;
+    background-color: #F9CB9C;
+    padding:10px;
+    position:fixed;
+    top:56px;
+    z-index:10;
+}
+
+
+/* ======================================================================================
+////////////////////////////////////////////\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
+|||||||||||||||||||||||||||||||||||||||Menu @media|||||||||||||||||||||||||||||||||||||||
+\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\/////////////////////////////////////////////
+ =======================================================================================*/
 @media (max-width: 767px) {
     nav div ul li:first-child {
         margin-top: 1em;
@@ -87,7 +108,11 @@ main > div.container{
     }
 }
 
-/*product block*/
+/* ======================================================================================
+////////////////////////////////////////////\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
+|||||||||||||||||||||||||||||||||||||||Product block|||||||||||||||||||||||||||||||||||||
+\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\/////////////////////////////////////////////
+ =======================================================================================*/
 .productblock{
     background:#F2552C;
     width:200px;
@@ -107,32 +132,12 @@ main > div.container{
     text-overflow: ellipsis;
 }
 
-/**/
-.kleineMargin{
-    color:black;
-    margin: 10px;
 
-}
-
-
-.submenu{
-    width:100%;
-    background-color: #F9CB9C;
-    padding:10px;
-    position:fixed;
-    top:56px;
-    z-index:10;
-}
-
-.veilingsPaginaImage{
-   width:552px;
-    height:750px;
-    margin-bottom:20px;
-}
-
-.timerText{
-
-}
+/* ======================================================================================
+////////////////////////////////////////////\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
+|||||||||||||||||||||||||||||||||||||||Verkoper block||||||||||||||||||||||||||||||||||||
+\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\/////////////////////////////////////////////
+ =======================================================================================*/
 
 .verkoperSection{
     border-radius:20px;
@@ -146,26 +151,42 @@ main > div.container{
     margin-bottom:1.5rem;
 }
 
-.biedingenSection{
+/* ======================================================================================
+////////////////////////////////////////////\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
+|||||||||||||||||||||||||||||||||||||||Auction section|||||||||||||||||||||||||||||||||||
+\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\/////////////////////////////////////////////
+ =======================================================================================*/
+.auction-section{
     border-radius:20px;
     padding: 20px;
     background-color:white;
 }
 
-.biedingenSection h4{
+.auction-section h4{
     color:#F4512C;
     margin-bottom:1.5rem;
 }
 
-.biedingenSection ul{
+.auction-page-image{
+    width:552px;
+    height:750px;
+    margin-bottom:20px;
+}
+
+.auction-section ul{
     list-style-type:none;
 }
-.biedingenSection ul li{
+.auction-section ul li{
 font-size:0.9rem;
     margin-top:5px;
 }
 
-.loginRegistreerSection{
+/* ======================================================================================
+////////////////////////////////////////////\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
+|||||||||||||||||||||||||||||||| Login en registreer formulier||||||||||||||||||||||||||||
+\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\/////////////////////////////////////////////
+ =======================================================================================*/
+.login-register-section{
     padding:5%;
     border-radius:20px;
     height:100%;
@@ -173,12 +194,24 @@ font-size:0.9rem;
     background-color:white;
 }
 
-.loginRegistreerSection button{
+.login-register-section button{
     margin-top:1rem;
 }
-.onderkantLoginRegistreer{
+.bottom-login-register-form{
     margin-top:1rem;
 }
+
+form p {
+    margin-top:10px;
+    margin-bottom:0px;
+}
+
+/* ======================================================================================
+////////////////////////////////////////////\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
+|||||||||||||||||||||||||||||||||||||||| Images||||||||||||||||||||||||||||||||||||||||||
+\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\/////////////////////////////////////////////
+ =======================================================================================*/
+
 
 .gebruikeresImage{
     width:12%;
@@ -186,12 +219,7 @@ font-size:0.9rem;
     margin-bottom:20px;
 }
 
-.productThumbnail{
-    height:250px;
-    width:250px;
-}
-
-.border-veiling-preview{
+.border-auction-preview{
     z-index:8;
     border:2px solid #F4512C;
     border-radius:10px;
