--- a/css/iconcepts.css
+++ b/css/iconcepts.css
@@ -16,28 +16,6 @@ h1,h2,h3,h4,h5,h6{
 |||||||||||||||||||||||||||||||||||||||Menu & submenu||||||||||||||||||||||||||||||||||||
 \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\/////////////////////////////////////////////
  =======================================================================================*/
-nav div ul{
-    width: 100% ;
-}
-
-nav div ul li a{
-    color:black;
-    font-weight:normal;
-}
-
-nav div ul li a:hover{
-    color:white;
-}
-
-nav a.paginatitel{
-    color:black;
-    padding-top: 0.3125rem;
-    padding-bottom: 0.3125rem;
-    margin-right: 1rem;
-    font-size: 1.25rem;
-    font-weight:bold;
-}
-
 nav{
     background-color: #F4512C;
 }
@@ -57,6 +35,18 @@ nav form button{
     color:black;
 }
 
+nav div ul{
+    width: 100% ;
+}
+
+nav div ul li a{
+    color:black;
+    font-weight:normal;
+}
+
+nav div ul li a:hover{
+    color:white;
+}
 
 .submenu{
     width:100%;
@@ -213,7 +203,7 @@ form p {
  =======================================================================================*/
 
 
-.gebruikeresImage{
+.user-image{
     width:12%;
     height:20%;
     margin-bottom:20px;
