--- a/css/iconcepts.css
+++ b/css/iconcepts.css
@@ -16,87 +16,26 @@ h1,h2,h3,h4,h5,h6{
 |||||||||||||||||||||||||||||||||||||||Menu & submenu||||||||||||||||||||||||||||||||||||
 \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\/////////////////////////////////////////////
  =======================================================================================*/
-nav{
-    background-color: #F4512C;
-}
-
-nav img{
-    position:relative;
-    margin:-8px;
-    right:8px;
-    max-width: 200px;
-    max-height: 56px;
-    width: auto;
-}
-
-nav form button{
-    background-color:white;
-    border-color: white;
-    color:black;
-}
-
-nav div ul{
-    width: 100% ;
-}
-
-nav div ul li a{
-    color:black;
-    font-weight:normal;
-}
-
-nav div ul li a:hover{
-    color:white;
-}
-
-.submenu{
-    width:100%;
-    background-color: #F9CB9C;
-    padding:10px;
-    position:fixed;
-    top:56px;
-    z-index:10;
-}
-
+nav{background-color: #F4512C;}
+nav img{position:relative;margin:-8px;right:8px;max-width: 200px;max-height: 56px;width: auto;}
+nav form button{background-color:white;border-color: white;color:black;}
+nav div ul{width: 100%;}
+nav div ul li a{color:black;font-weight:normal;}
+nav div ul li a:hover{color:white;}
+.submenu{width:100%;background-color: #F9CB9C;padding:10px;position:fixed;top:56px;z-index:10;}
 
 /* ======================================================================================
 ////////////////////////////////////////////\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
 |||||||||||||||||||||||||||||||||||||||Menu @media|||||||||||||||||||||||||||||||||||||||
 \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\/////////////////////////////////////////////
  =======================================================================================*/
-@media (max-width: 767px) {
-    nav div ul li:first-child {
-        margin-top: 1em;
-    }
-}
-
+@media (max-width: 767px) {nav div ul li:first-child {margin-top: 1em;}}
 /* offset for the top menu*/
-main > div.container{
-    margin-top: 62px;
-}
-
-@media (min-width: 576px) {
-    main > div.container{
-        margin-top: 62px;
-    }
-}
-
-@media (min-width: 768px) {
-    main > div.container{
-        margin-top: 62px;
-    }
-}
-
-@media (min-width: 992px) {
-    main > div.container{
-        margin-top: 108px;
-    }
-}
-
-@media (min-width: 1200px) {
-    main > div.container{
-        margin-top: 108px;
-    }
-}
+main > div.container{margin-top: 62px;}
+@media (min-width: 576px) {main > div.container{margin-top: 62px;}}
+@media (min-width: 768px) {main > div.container{margin-top: 62px;}}
+@media (min-width: 992px) {main > div.container{margin-top: 108px;}}
+@media (min-width: 1200px) {main > div.container{margin-top: 108px;}}
 
 /* ======================================================================================
 ////////////////////////////////////////////\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
