--- a/css/iconcepts.css
+++ b/css/iconcepts.css
@@ -195,6 +195,11 @@ font-size:0.9rem;
     background-color:white;
 }
 
+.login-section{
+    max-width: 550px;
+    margin: auto;
+}
+
 .login-section button,
 .register-section button{
     margin-top:1rem;
@@ -207,6 +212,12 @@ font-size:0.9rem;
 form p {
     margin-top:10px;
     margin-bottom:0px;
+}
+
+@media (max-width: 575px) {
+    .login input{
+        width: 100%;
+    }
 }
 
 /* ======================================================================================
@@ -231,3 +242,21 @@ form p {
 
 }
 
+
+/* ======================================================================================
+////////////////////////////////////////////\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
+|||||||||||||||||||||||||||||||||||||||| input ||||||||||||||||||||||||||||||||||||||||||
+\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\/////////////////////////////////////////////
+ =======================================================================================*/
+.btn.btn-primary{
+    background:#f2552c;
+}
+
+/* ======================================================================================
+////////////////////////////////////////////\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
+|||||||||||||||||||||||||||||||||||||||| generic ||||||||||||||||||||||||||||||||||||||||||
+\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\/////////////////////////////////////////////
+ =======================================================================================*/
+.error-message{
+    color:red;
+}
