css update action thumbnail

--- a/css/iconcepts.css
+++ b/css/iconcepts.css
@@ -241,6 +241,9 @@ form p {
     margin:5% 0%;
 
 }
+.action-thumbnail{
+    size:200px;
+}
 
 
 /* ======================================================================================
