Inloggen/registreren wachtwoord restrictie
Toevoeging van een restrictie aan het form voor het wachtwoord. Er kan niet gesubmit worden zonder dat het wachtwoord 1 cijfer, hoofdletter en kleine letter bevat.

--- a/css/iconcepts.css
+++ b/css/iconcepts.css
@@ -271,7 +271,8 @@ margin-top{
 padding-top{
     padding-top: 1rem;
 }
-
+option,
 input{
-    width: 100%;
+    width:100%;
+    max-width: 100%;
 }
