--- a/css/iconcepts.css
+++ b/css/iconcepts.css
@@ -275,3 +275,10 @@ padding-top{
 input{
     width: 100%;
 }
+
+input:read-only {
+    color: #DCDAD1;
+    padding: 2px;
+    margin: 0 0 0 0;
+    background-color: salmon;
+}
