--- a/css/iconcepts.css
+++ b/css/iconcepts.css
@@ -107,6 +107,31 @@ main > div.container{
         margin-top: 108px;
     }
 }
+/* ======================================================================================
+////////////////////////////////////////////\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
+||||||||||||||||||||||||||||||||||||UserProfileBlock|||||||||||||||||||||||||||||||||||||
+\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\/////////////////////////////////////////////
+ =======================================================================================*/
+.user-section{
+    padding:5%;
+    border-radius:20px;
+    height:100%;
+    background-color:white;
+    max-width:550px;
+    margin:auto;
+}
+
+.user-section button
+{
+    margin-top:1rem;
+}
+
+.bottom-user-section{
+    margin-top:1rem;
+}
+
+
+
 
 /* ======================================================================================
 ////////////////////////////////////////////\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
