--- a/css/iconcepts.css
+++ b/css/iconcepts.css
@@ -154,17 +154,17 @@ main > div.container{
     border-radius:20px;
     height:100%;
     background-color:white;
-    max-width:550px;
     margin:auto;
 }
 
-.user-section button
-{
-    margin-top:1rem;
+.user-section p{
+    margin: 1rem;
 }
 
-.bottom-user-section{
-    margin-top:1rem;
+
+
+.user-section-button-margin{
+    margin:1rem;
 }
 
 
@@ -346,3 +346,5 @@ input:read-only {
     margin: 0 0 0 0;
     background-color: salmon;
 }
+
+.center{margin:auto;}
