categorie menu concept ingevoegd

--- a/css/iconcepts.css
+++ b/css/iconcepts.css
@@ -98,7 +98,6 @@ nav form button{
     padding-left: 35px;
 }.main-content{
      margin: 100px auto auto 200px;
-
      padding: 3px;
      border: 3px solid black;
      border-radius: 100%;
@@ -312,4 +311,12 @@ padding-top{
 
 input{
     width: 100%;
+}
+/* ======================================================================================
+////////////////////////////////////////////\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
+|||||||||||||||||||||||||||||||||||||||| footer ||||||||||||||||||||||||||||||||||||||||||
+\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\/////////////////////////////////////////////
+ =======================================================================================*/
+footer.container.rubriekfooter{
+margin-left: 200px;
 }
