--- a/css/iconcepts.css
+++ b/css/iconcepts.css
@@ -346,7 +346,9 @@ input:read-only {
     background-color: lightgray;
 }
 
-.center{margin:auto;}
+.center{margin:auto;
+}
+
 /* ======================================================================================
 ////////////////////////////////////////////\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
 |||||||||||||||||||||||||||||||||||||||| footer ||||||||||||||||||||||||||||||||||||||||||
