--- a/css/iconcepts.css
+++ b/css/iconcepts.css
@@ -149,7 +149,7 @@ main > div.container{
 \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\/////////////////////////////////////////////
  =======================================================================================*/
 .user-section{
-    padding:5%;
+    padding-bottom:10%; padding-top: 10%;
     border-radius:20px;
     height:100%;
     background-color:white;
@@ -248,6 +248,7 @@ font-size:0.9rem;
 |||||||||||||||||||||||||||||||| Login en registreer formulier||||||||||||||||||||||||||||
 \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\/////////////////////////////////////////////
  =======================================================================================*/
+.verkoopaanvraag-section,
 .login-section,
 .register-section{
     padding:5%;
@@ -256,17 +257,17 @@ font-size:0.9rem;
     margin-top: 20%;
     background-color:white;
 }
-
+.verkoopaanvraag-section,
 .login-section{
     max-width: 550px;
     margin: auto;
 }
-
+.verkoopaanvraag-section,
 .login-section button,
 .register-section button{
     margin-top:1rem;
 }
-
+.verkoopaanvraag-section,
 .bottom-login-register-form{
     margin-top:1rem;
 }
@@ -339,12 +340,12 @@ input{
     width:100%;
     max-width: 100%;
 }
-
+input:-moz-read-only,
 input:read-only {
     color: black;
     padding: 2px;
     margin: 0 0 0 0;
-    background-color: lightgray;
+    background-color: black;
 }
 
 .center{margin:auto;}
