Verkoper feedback section
Laat feedback zien die de verkoper als VERKOPER heeft ontvangen.

--- a/css/iconcepts.css
+++ b/css/iconcepts.css
@@ -218,6 +218,15 @@ main > div.container{
     margin-bottom:1.5rem;
 }
 
+.feedbackBlock p {
+    margin:0;
+    padding:0;
+}
+
+.feedbackBlock p.eindeFeedback{
+    margin-bottom:1rem;
+}
+
 /* ======================================================================================
 ////////////////////////////////////////////\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
 |||||||||||||||||||||||||||||||||||||||Auction section|||||||||||||||||||||||||||||||||||
