Feedback errormessage revamp
Nieuwe uniforme layout van de errormessages, en duidelijke instructies wat je er mee moet doen, groetjes Bonno xoxo

--- a/css/iconcepts.css
+++ b/css/iconcepts.css
@@ -352,7 +352,7 @@ input:read-only {
 \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\/////////////////////////////////////////////
  =======================================================================================*/
 .error-message{
-    color:red;
+    color:#F4512C;
 }
 
 margin-top{
@@ -379,6 +379,10 @@ padding-top{
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+.error-box{
+    height:600px;
 }
 
 /* ======================================================================================
