--- a/css/iconcepts.css
+++ b/css/iconcepts.css
@@ -324,8 +324,11 @@ img.auction-thumbnail{
     max-width: 200px;
     max-height: 200px;
 }
-
-
+img.miniature{
+    max-height: 50px;
+    max-width: 50px;
+    margin:0 10px;
+}
 /* ======================================================================================
 ////////////////////////////////////////////\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
 |||||||||||||||||||||||||||||||||||||||| input ||||||||||||||||||||||||||||||||||||||||||
