--- a/css/iconcepts.css
+++ b/css/iconcepts.css
@@ -96,7 +96,8 @@ nav form button{
     color: white;
     font-weight: bolder;
     padding-left: 35px;
-}.main-content{
+}
+.main-content{
      margin: 100px auto auto 200px;
      padding: 3px;
 
