--- a/css/iconcepts.css
+++ b/css/iconcepts.css
@@ -171,6 +171,10 @@ main > div.container{
     text-overflow: ellipsis;
 }
 
+.productblock-large{
+    max-height: 100px;
+}
+
 
 /* ======================================================================================
 ////////////////////////////////////////////\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
@@ -368,6 +372,10 @@ padding-top{
 
 .error-box{
     height:600px;
+}
+
+.img-fluid{
+    max-height: 100%;
 }
 
 /* ======================================================================================
