--- a/css/iconcepts.css
+++ b/css/iconcepts.css
@@ -324,11 +324,19 @@ img.auction-thumbnail{
     max-width: 200px;
     max-height: 200px;
 }
-img.miniature{
+img.miniature {
     max-height: 50px;
     max-width: 50px;
-    margin:0 10px;
+    margin: 0 10px;
 }
+
+#map{
+    width:290px;
+    height:290px;
+    position: relative;
+    overflow: hidden;
+}
+
 /* ======================================================================================
 ////////////////////////////////////////////\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
 |||||||||||||||||||||||||||||||||||||||| input ||||||||||||||||||||||||||||||||||||||||||
