--- a/css/iconcepts.css
+++ b/css/iconcepts.css
@@ -191,7 +191,9 @@ main > div.container{
 .productblock-large{
     max-height: 100px;
 }
-
+.productblock-large  img{
+    max-height: 100px;
+}
 
 /* ======================================================================================
 ////////////////////////////////////////////\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
@@ -401,6 +403,11 @@ padding-top{
 
 .img-fluid{
     max-height: 100%;
+}
+
+a.hidden-link{
+    text-decoration: none;
+    color:inherit;
 }
 
 /* ======================================================================================
