--- a/css/iconcepts.css
+++ b/css/iconcepts.css
@@ -280,6 +280,10 @@ font-size:0.9rem;
     margin-top:5px;
 }
 
+.search-filters{
+    background: #F2552C;
+}
+
 /* ======================================================================================
 ////////////////////////////////////////////\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
 |||||||||||||||||||||||||||||||| Login en registreer formulier||||||||||||||||||||||||||||
