bugfix Infinite submenu

--- a/css/iconcepts.css
+++ b/css/iconcepts.css
@@ -111,8 +111,11 @@ nav form button{
     color:#ffffff;
     list-style-type: none;
     text-decoration:none;
+    padding-left: 10px;
 }
-
+.list ul{
+    padding-left: 10px;
+}
 /* ======================================================================================
 ////////////////////////////////////////////\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
 |||||||||||||||||||||||||||||||||||||||Menu @media|||||||||||||||||||||||||||||||||||||||
