--- a/css/iconcepts.css
+++ b/css/iconcepts.css
@@ -113,7 +113,7 @@ nav form button{
     text-decoration:none;
     padding-left: 10px;
 }
-.list ul{
+.list {
     padding-left: 10px;
 }
 /* ======================================================================================
