--- a/css/iconcepts.css
+++ b/css/iconcepts.css
@@ -431,6 +431,11 @@ a.hidden-link{
     color:inherit;
 }
 
+.white-text{
+    color:white;
+}
+
+
 /* ======================================================================================
 ////////////////////////////////////////////\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
 |||||||||||||||||||||||||||||||||||||||| footer ||||||||||||||||||||||||||||||||||||||||||
