bug fixes series alpha

--- a/css/iconcepts.css
+++ b/css/iconcepts.css
@@ -435,6 +435,10 @@ a.hidden-link{
     color:white;
 }
 
+.sub-categorie{
+    padding-left:15px;
+}
+
 
 /* ======================================================================================
 ////////////////////////////////////////////\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
