Update VeilingStarten (toevoegen aan bestand tabel) en Gebruikersprofiel extra functionaliteit.

--- a/css/iconcepts.css
+++ b/css/iconcepts.css
@@ -178,8 +178,13 @@ main > div.container{
     margin:1rem;
 }
 
+.hyperlinklijst{
+    list-style-type: none;
+}
 
-
+.hyperlinklijst li{
+    margin-bottom:2rem;
+}
 
 /* ======================================================================================
 ////////////////////////////////////////////\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
