--- a/css/iconcepts.css
+++ b/css/iconcepts.css
@@ -453,6 +453,9 @@ a.hidden-link{
     padding-left:15px;
 }
 
+.no-padding{
+    padding:0;
+}
 
 /* ======================================================================================
 ////////////////////////////////////////////\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
