--- a/css/iconcepts.css
+++ b/css/iconcepts.css
@@ -470,6 +470,10 @@ a.hidden-link{
     padding:0;
 }
 
+cursor-pointer:hover {
+    cursor: pointer;
+}
+
 /* ======================================================================================
 ////////////////////////////////////////////\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
 |||||||||||||||||||||||||||||||||||||||| footer ||||||||||||||||||||||||||||||||||||||||||
