script van hier tot atlantis

--- a/css/iconcepts.css
+++ b/css/iconcepts.css
@@ -474,6 +474,19 @@ cursor-pointer:hover {
     cursor: pointer;
 }
 
+div.noscript{
+    position: absolute;
+    top:0;
+    left:0;
+    right:0;
+    width:100%;
+    height:auto;
+    background:#f2552c;
+    color:white;
+    z-index: 1031;
+    text-align: center;
+}
+
 /* ======================================================================================
 ////////////////////////////////////////////\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
 |||||||||||||||||||||||||||||||||||||||| footer ||||||||||||||||||||||||||||||||||||||||||
