--- a/css/iconcepts.css
+++ b/css/iconcepts.css
@@ -487,6 +487,16 @@ div.noscript{
     text-align: center;
 }
 
+.page-link{
+    color:#f2552c;
+    border: 1px solid #F2552C;
+}
+
+.bold{
+    font-weight: bold;
+}
+
+
 /* ======================================================================================
 ////////////////////////////////////////////\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
 |||||||||||||||||||||||||||||||||||||||| footer ||||||||||||||||||||||||||||||||||||||||||
