--- a/css/iconcepts.css
+++ b/css/iconcepts.css
@@ -495,6 +495,9 @@ div.noscript{
     color:#F2552C;
     border: 1px solid #F2552C;
 }
+.page-link:focus{
+    box-shadow: 0 0 0 0.2rem rgba(242,85,44,.25);
+}
 
 .bold{
     font-weight: bold;
